--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
             },
             "root": "",
             "sourceRoot": "src",
-            "prefix": "",
+            "prefix": "app",
             "architect": {
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
@@ -31,7 +31,8 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles.css"
+                            "src/css/defaultStyle.css",
+                            "src/css/styles.css"
                         ],
                         "scripts": []
                     },
