--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
-        "lint": "ng lint"
+        "lint": "ng lint",
+        "dev": "json-server db.json"
     },
     "private": true,
     "dependencies": {
