--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
                         ],
                         "styles": [
                             "src/css/defaultStyle.css",
+                            "src/css/svgIcons.css",
                             "src/css/styles.css"
                         ],
                         "scripts": []
@@ -95,7 +96,7 @@
                         "karmaConfig": "karma.conf.js",
                         "assets": [
                             "src/favicon.ico",
-                            "src/assets"
+                            "src/assets/svg/*"
                         ],
                         "styles": [
                             "src/styles.css"
