--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
             },
             "root": "",
             "sourceRoot": "src",
-            "prefix": "app",
+            "prefix": "",
             "architect": {
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
