--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
         "lint": "ng lint",
-        "dev": "json-server db.json"
+        "server": "json-server db.json"
     },
     "private": true,
     "dependencies": {
